--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     @*<link href="~/Content/Layout/css/simple-sidebar.css" rel="stylesheet" />*@
 
     <link href="~/Content/SideBarStyle.css" rel="stylesheet" />
-    <link href="~/Content/FooterStyle.css" rel="stylesheet"/>    
+    <link href="~/Content/FooterStyle.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -58,7 +58,22 @@
 
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="m-0 text-center text-white">Projeto Banking -BRQ</p>
+                    <p class="m-0 text-center text-white">Trabalho desenvolvido para o projeto multidisplinar do 3º ano de Sistemas de Informação da FIAP</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="m-0 center text-white">
+                        Grupo
+                        <li>Giovanni Gualiato</li>
+                        <li>Lucas Farias</li>
+                        <li>Caio Willian</li>
+                        <li>Marco Antonio</li>
+                        <li>Rafael Finoti</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
