--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
@@ -39,7 +39,7 @@
 
         <table id="table" class="table table-bordered table-hover table-striped">
             <tr>
-                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
+                <td width="17%">@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
                 <td>@Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Pesquisar por nome" })</td>
                 <td>@Html.TextBoxFor(m => m.Stock, new { @class = "form-control", @placeholder = "Pesquisar por estoque" })</td>
                 <td>@Html.TextBoxFor(m => m.Value, new { @class = "form-control", @placeholder = "Pesquisar por valor" })</td>
