--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Create.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Telefone)
-            @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control phone_with_ddd" })
             @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
         </div>
 
