--- a/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-6">
                     @Html.LabelFor(m => m.Telefone)
-                    @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control phone_with_ddd" })
                     @Html.ValidationMessageFor(m => m.Telefone, "", new { @class = "text-danger" })
                 </div>
             </div>
