--- a/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Create.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Create.cshtml
@@ -7,6 +7,10 @@
 <br />
 <div class="container">
     <h2>Nos ajude, faça seu investimento</h2>
+  
+    <a href="@Url.Action("DuvidasInvest","InvestimentUser")">
+        <i class="fa fa-question-circle" aria-hidden="true">Tire suas dúvidas</i>
+    </a>
 
     @if (TempData["MsgInvestimentoSucesso"] != null)
     {
@@ -23,19 +27,22 @@
         @Html.AntiForgeryToken();
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
+        <div class="form-group">            
             @Html.LabelFor(m => m.InvestimentId)
-            @Html.DropDownList("InvestimentId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownList("InvestimentId", null, htmlAttributes: new { @class = "form-control" })            
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Num)
-            @Html.TextBoxFor(m => m.Num, htmlAttributes: new { @class = "form-control" })
+        <div class="form-group row">
+            <div class="col-md-6">
+                @Html.LabelFor(m => m.Num)
+                @Html.TextBoxFor(m => m.Num, htmlAttributes: new { @class = "form-control", @type = "number" })
+            </div>
+            <div class="col-md-6">
+                @Html.LabelFor(m => m.CardNumber)
+                @Html.TextBoxFor(m => m.CardNumber, htmlAttributes: new { @class = "form-control creditcard" })
+            </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.CardNumber)
-            @Html.TextBoxFor(m => m.CardNumber, htmlAttributes: new { @class = "form-control" })
-        </div>
-
+        
         <input type="submit" class="btn btn-default" value="Concluir investimento" />
     }
 </div>
+<br />
