--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -98,6 +98,7 @@
             $('.phone_with_ddd').mask('(00) 0000-0000');
             $('.cpf').mask('000.000.000-00', { reverse: true });
             $('.money').mask('000.000.000.000.000,00 ', { reverse: true });
+            $('.creditcard').mask('0000 0000 0000 0000');
         }); 
         
     </script>
