--- a/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         <div class="row align-items-center">
             <div class="col-md-6 order-2">
                 <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=836" alt="">
+                    <img class="img-fluids rounded-circle" src="https://i1.sndcdn.com/artworks-000237890799-4cwi8m-t500x500.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6 order-1">
@@ -46,7 +46,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=452" alt="">
+                    <img class="img-fluid rounded-circle" src="http://bat.finance/wp-content/uploads/2016/07/fotolia_111325057.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6">
