--- a/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
 <header class="masthead">
     <div class="overlay">
         <div class="container">
-            <h1 class="display-1 text-white">One Page Wonder</h1>
-            <h2 class="display-4 text-white">Will Rock Your Socks Off</h2>
+            <h1 class="display-1 text-white">BitSeeks</h1>
+            <h2 class="display-4 text-white">Livro de Criptomoeda</h2>
         </div>
     </div>
 </header>
@@ -33,8 +33,8 @@
             </div>
             <div class="col-md-6 order-1">
                 <div class="p-5">
-                    <h2 class="display-4">For those about to rock...</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    <h2 class="display-4">Sobre o Bitseeks</h2>
+                    <p>O objetivo desse projeto é ingressar no segmento financeiro criando uma nova categoria de investimento onde busca beneficiar pessoas físicas e jurídicas interessadas em um nicho que vem apresentando mais rentabilidade do que outros no mesmo segmento.</p>
                 </div>
             </div>
         </div>
@@ -46,13 +46,13 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="http://bat.finance/wp-content/uploads/2016/07/fotolia_111325057.jpg" alt="">
+                    <img class="img-fluid rounded-circle" src="https://financesonline.com/uploads/2016/11/bi-1.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="p-5">
-                    <h2 class="display-4">We salute you!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    <h2 class="display-4">A plataforma </h2>
+                    <p> O foco está na criação de uma plataforma completa visando auxiliar o usuário em todos os processos que envolvem as criptomoedas, desde suas transações até o gerenciamento de seu fundo.</p>
                 </div>
             </div>
         </div>
@@ -64,13 +64,13 @@
         <div class="row align-items-center">
             <div class="col-md-6 order-2">
                 <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=453" alt="">
+                    <img class="img-fluid rounded-circle" src="http://bat.finance/wp-content/uploads/2016/07/fotolia_111325057.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6 order-1">
                 <div class="p-5">
-                    <h2 class="display-4">Let there be rock!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    <h2 class="display-4">Segurança</h2>
+                    <p>Conseguir trazer segurança para os usuários da plataforma também foi um dos principais objetivos, por isso houve a integração da tecnologia BLOCKCHAIN, que acrescenta também velocidade e eficiência de custos, além da criptografia protegendo a integridade dos dados.</p>
                 </div>
             </div>
         </div>
