usando moneyMask, correção de bugs e adaptações

--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Details.cshtml
@@ -22,8 +22,8 @@
                         <td>@Html.DisplayFor(m => m.Stock)</td>
                     </tr>
                     <tr>
-                        <td>@Html.LabelFor(m => m.Value)</td>
-                        <td>@Html.DisplayFor(m => m.Value)</td>
+                        <td>@Html.LabelFor(m => m.DisplayValue)</td>
+                        <td>@Html.DisplayFor(m => m.DisplayValue)</td>
                     </tr>
                     <tr>
                         <td>@Html.LabelFor(m => m.InputDate)</td>
