--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
@@ -32,8 +32,8 @@
         </a>
         <table id="table" class="table table-bordered table-hover table-striped">
             <tr>
-                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
-                <td>@Html.TextBoxFor(m => m.Cpf, new { @class = "form-control", @placeholder = "Pesquisar por CPF" })</td>
+                <td width="17%">@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
+                <td>@Html.TextBoxFor(m => m.Cpf, new { @class = "form-control cpfsearch", @placeholder = "Pesquisar por CPF" })</td>
                 <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control", @placeholder = "Pesquisar por nome" })</td>
                 <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Pesquisar por email" })</td>
             </tr>
