--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Details.cshtml
@@ -5,38 +5,52 @@
 
 <br />
 <div class="container">
-    <h2>Informações</h2>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2>Informações de @Model.Nome</h2>
+        </div>
 
-    <a class="btn btn-default" href="@Url.Action("Index","Contatos")">
-        <i class="fa fa-list" aria-hidden="true"></i>
-        Listar Contatos
-    </a>
+        <a class="btn btn-default" href="@Url.Action("Index","Contatos")">
+            <i class="fa fa-list" aria-hidden="true"></i>
+            Listar Contatos
+        </a>
 
-    <div class="panel panel-default">        
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-5">
                     <table class="tbale table-bordered table-condensed table-hover">
                         <tr>
-                            <td>@Html.LabelFor(m => m.Nome)</td>
-                            <td>@Html.DisplayFor(m => m.Nome)</td>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Nome)</b>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => m.Nome)
+                            </td>
                         </tr>
                         <tr>
-                            <td>@Html.LabelFor(m => m.Email)</td>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Email)</b>
+                            </td>
                             <td>@Html.DisplayFor(m => m.Email)</td>
                         </tr>
                         <tr>
-                            <td>@Html.LabelFor(m => m.Telefone)</td>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Telefone)</b>
+                            </td>
                             <td>@Html.DisplayFor(m => m.Telefone)</td>
                         </tr>
                         <tr>
-                            <td>@Html.LabelFor(m => m.DataCadastro)</td>
+                            <td>
+                                <b>@Html.LabelFor(m => m.DataCadastro)</b>
+                            </td>
                             <td>@Html.DisplayFor(m => m.DataCadastro)</td>
                         </tr>
                         @if (Model.DataAlteracao != null)
                         {
                             <tr>
-                                <td>@Html.LabelFor(m => m.DataAlteracao)</td>
+                                <td>
+                                    <b>@Html.LabelFor(m => m.DataAlteracao)</b>
+                                </td>
                                 <td>@Html.DisplayFor(m => m.DataAlteracao)</td>
                             </tr>
                         }
