--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProjetoBRQ.Models.News
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Editar";
 }
 <br />
 <div class="container">
@@ -41,7 +41,11 @@
     <img src="" height="200" id="pw" alt="Prévia da imagem...">
 </div>
 <br />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
 <script>
+    tinymce.init({ selector: 'textarea' });
     $('#File').change(function () { previewFile() });
 
     function previewFile() {
