--- a/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Details.cshtml
@@ -30,7 +30,7 @@
                     @Html.LabelFor(m => m.GetTotalInvestiment)
                 </th>
                 <td>
-                    @Html.DisplayFor(m => m.GetTotalInvestiment)
+                    R$ @Html.DisplayFor(m => m.GetTotalInvestiment)
                 </td>
             </tr>
         </table>
