corrigindo paginação e detalhes

--- a/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Historico.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/InvestimentUser/Historico.cshtml
@@ -34,13 +34,14 @@
         <ul class="pagination" id="page"></ul>  
     </div>
 </div>
+<br />
 
 
 <script>
     function createPaged(data, id = 1) {
         var html = '';
 
-        for (var i = 1; i <= data.countPages + 1; i++) {
+        for (var i = 1; i <= data.countPages; i++) {
             if (i == id) 
                 html += `<li class="page-item active"><a class="page-link" href="#" id="paged-${i}">${i}</a></li>`;
             else 
